--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "electron-packager": "^16.0.0"
   },
   "dependencies": {
-    "dotenv": "^16.0.2"
+    "@electron/remote": "^2.0.8",
+    "dotenv": "^16.0.2",
+    "electron-acrylic-window": "^0.5.11"
   },
   "build": {
     "appId": "com.bettermusiccontrol.app",
